# sir_telepresence

./: .gitignore  .gitmodules  README.md
android_gui/: settings.gradle
android_gui/app/: build.gradle
android_gui/app/src/androidTest/java/it/cnr/istc/sirobotics/: ExampleInstrumentedTest.java
android_gui/app/src/main/: AndroidManifest.xml
android_gui/app/src/main/java/it/cnr/istc/sirobotics/: MainActivity.java  QuestionActivity.java  WSConnection.java
android_gui/app/src/main/res/layout/: activity_main.xml  activity_question.xml
android_gui/app/src/main/res/values/: strings.xml  themes.xml
android_gui/app/src/main/res/values-night/: themes.xml
android_gui/app/src/test/java/it/cnr/istc/sirobotics/: ExampleUnitTest.java
android_gui/gradle/wrapper/: gradle-wrapper.properties
cloud/: README.md  pom.xml
cloud/docs/: db.wsd
cloud/src/main/antlr4/it/cnr/istc/pst/sirobotics/configuration/: robot_conf.g4
cloud/src/main/antlr4/it/cnr/istc/pst/sirobotics/telepresence/: robot_conf.g4
cloud/src/main/java/it/cnr/istc/pst/sirobotics/telepresence/: Action.java  App.java  Condition.java  HouseController.java  HouseManager.java  InteractionManager.java  RasaClient.java  SolverManager.java  UserController.java
cloud/src/main/java/it/cnr/istc/pst/sirobotics/telepresence/api/: Device.java  DeviceType.java  ExecConf.java  House.java  LongArray.java  RobotConf.java  StringWrapper.java  User.java
cloud/src/main/java/it/cnr/istc/pst/sirobotics/telepresence/db/: DeviceEntity.java  DeviceTypeEntity.java  HouseEntity.java  RobotEntity.java  RobotTypeEntity.java  SensorDataEntity.java  SensorEntity.java  SensorTypeEntity.java  UserEntity.java
cloud/src/main/resources/: actions.json  config.properties
cloud/src/main/resources/public/: admin_device_types.html  admin_device_types.js  admin_houses.html  admin_houses.js  admin_users.html  admin_users.js  body_admin.html  body_guest.html  body_user.html  config.js  context.js  index.html  main.js  si_robotics.css  si_robotics.js
deliberative_tier/: CMakeLists.txt  deliberative_executor.cpp  deliberative_manager.cpp  main.cpp  package.xml
deliberative_tier/domain/: domain.rddl
deliberative_tier/domains/: configure.rddl  ohmni.rddl
deliberative_tier/include/: deliberative_executor.h  deliberative_manager.h
deliberative_tier/launch/: ltm.launch  ohmni.launch
dialogue/: CMakeLists.txt  package.xml
dialogue/launch/: dialogue_services.launch  diaogue_services.launch
dialogue/scripts/: dialogue.py  google_stt.py  google_tts.py  stt.py  tts.py
dialogue_manager/: CMakeLists.txt  package.xml
dialogue_manager/launch/: dialogue_services.launch
dialogue_manager/msg/: audio.msg  button.msg  dialogue_state.msg
dialogue_manager/scripts/: dialogue.py  google_stt.py  google_tts.py
dialogue_manager/srv/: answer_to_message.srv  audio_to_play.srv  face_to_show.srv  image_to_show.srv  page_to_show.srv  question_to_ask.srv  set_reminder.srv  utterance_to_pronounce.srv  utterance_to_recognize.srv  video_to_play.srv
edge/: pom.xml
edge/src/main/java/it/cnr/istc/pst/sirobotics/edge/: App.java
edge/src/main/java/it/cnr/istc/pst/sirobotics/edge/api/: Device.java  DeviceType.java  (+4 more)
edge/src/main/resources/: application.properties
edge/src/main/resources/static/: index.html
gui/: CMakeLists.txt  gui_server.cpp  gui_server.h  main.cpp  package.xml
gui/scripts/: gui.py
gui/static/: main.js
gui/templates/: index.html
home_automation/: CMakeLists.txt  package.xml
home_automation/launch/: home_automation.launch
home_automation/msg/: home_automation_state.msg
home_automation/scripts/: home.py
ltm/: CMakeLists.txt  dialogue_manager.cpp  local_task_manager.cpp  main.cpp  ohmni_executor.cpp  package.xml
ltm/include/: dialogue_manager.h  local_task_manager.h  ohmni_executor.h
ltm/launch/: ltm.launch
ltm/srv/: command_finished.srv  dialogue_finished.srv  start_dialogue.srv  task_finished.srv
msgs/: CMakeLists.txt  package.xml
msgs/msg/: deliberative_state.msg  dialogue_state.msg  navigation_state.msg  system_state.msg
msgs/srv/: create_reasoner.srv  end_task.srv  get_state.srv  get_string.srv  notify_reasoner_state.srv  reproduce_responses.srv  set_eyes.srv  set_mouth.srv  speak.srv  start_task.srv  state.srv  string_service.srv  task_finished.srv  update_timelines.srv
nlp/: .dockerignore  Dockerfile  README.md  config.yml  domain.yml
nlp/actions/: actions.py  validations.py
nlp/data/: nlu.yml  rules.yml  stories.yml
nlp/tests/: test_stories.yml
nlu/: config.yml  domain.yml
nlu/actions/: actions.py
nlu/data/: nlu.yml  rules.yml  stories.yml
nlu/example/: entry_point.py
nlu/tests/: test_stories.yml
persistence_manager/: CMakeLists.txt  package.xml
persistence_manager/scripts/: storage.py
persistence_manager/srv/: get_state.srv  set_state.srv
reminder/: CMakeLists.txt  package.xml
reminder/scripts/: reminder.py
robot/emotion_recognition/: README.md
robot_gui/: CMakeLists.txt  gui_server.cpp  gui_server.h  package.xml  robot_gui.py  robot_gui_physical_exercise.py
robot_gui/scripts/: robot_gui.py
robot_gui/static/: main.css  main.js  reasoner.js
robot_gui/static/css/: main.css
robot_gui/static/js/: index.js  main.js  options.js  timelines.js
robot_gui/static/js/modules/: graph.js  timelines.js
robot_gui/templates/: head.html  index.html  index_physical_exercise.html  navbar.html  navbar_content.html  timelines.html
robot_gui_/: robot_gui.py
robot_gui_/static/css/: main.css
robot_gui_/static/js/: main.js  options.js
robot_gui_/static/js/modules/: graph.js  timelines.js
robot_gui_/templates/: index.html  navbar.html  navbar_content.html
sequencer_tier/: CMakeLists.txt  main.cpp  package.xml  sequencer.cpp  service_call.cpp
sequencer_tier/domains/: cognitive_exercise.rddl  configure.rddl  ohmni.rddl  physical_exercise.rddl  test.rddl
sequencer_tier/include/: sequencer.h  service_call.h
sequencer_tier/launch/: biceps_curl.launch  blood_pressure.launch  blood_saturation.launch  count_the_word_easy.launch  count_the_word_hard.launch  ohmni.launch
(+9 files in other folders)
