<?xml version="1.0"?>
<package format="2">
  <name>persistence_manager</name>
  <version>0.0.1</version>
  <description>The Robot Persistence Manager package</description>

  <maintainer email="riccardo.debenedictis@istc.cnr.it">Riccardo De Benedictis</maintainer>
  <maintainer email="gloria.beraldo@istc.cnr.it">Gloria Beraldo</maintainer>

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>