<?xml version="1.0"?>
<package format="2">
  <name>robot_gui</name>
  <version>0.0.1</version>
  <description>The Robot Graphical User Interface (GUI) package</description>

  <maintainer email="riccardo.debenedictis@istc.cnr.it">Riccardo De Benedictis</maintainer>
  <maintainer email="gloria.beraldo@istc.cnr.it">Gloria Beraldo</maintainer>

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <depend>msgs</depend>
</package>