<?xml version="1.0"?>
<package format="2">
  <name>robot_gui</name>
  <version>0.1.0</version>
  <description>The Robot GUI package</description>

  <maintainer email="riccardo.debenedictis@istc.cnr.it">Riccardo De Benedictis</maintainer>
  <maintainer email="gloria.beraldo@istc.cnr.it">Gloria Beraldo</maintainer>

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>roslib</depend>
  <depend>deliberative_tier</depend>
  <depend>sequencer_tier</depend>
  <depend>dialogue_manager</depend>
</package>